@@ -78,7 +78,14 @@ class Config(object):
 
     def gpg_signing_command(self):
         """What program should be used to sign signatures?"""
-        return "gpg"
+        result = self._gpg_signing_command()
+        if result is None:
+            result = "gpg"
+        return result
+
+    def _gpg_signing_command(self):
+        """See gpg_signing_command()."""
+        return None
 
     def __init__(self):
         super(Config, self).__init__()
@@ -172,7 +179,7 @@ class IniBasedConfig(Config):
             if self._get_parser().has_option(section, 'email'):
                 return self._get_parser().get(section, 'email')
 
-    def gpg_signing_command(self):
+    def _gpg_signing_command(self):
         """See Config.gpg_signing_command."""
         section = self._get_section()
         if section is not None:
@@ -259,12 +266,12 @@ class LocationConfig(IniBasedConfig):
         matches.sort(reverse=True)
         return matches[0][1]
 
-    def gpg_signing_command(self):
+    def _gpg_signing_command(self):
         """See Config.gpg_signing_command."""
-        command = super(LocationConfig, self).gpg_signing_command()
+        command = super(LocationConfig, self)._gpg_signing_command()
         if command is not None:
             return command
-        return self._get_global_config().gpg_signing_command()
+        return self._get_global_config()._gpg_signing_command()
 
     def _get_user_id(self):
         user_id = super(LocationConfig, self)._get_user_id()
@@ -308,9 +315,9 @@ class BranchConfig(Config):
         """See Config._get_signature_checking."""
         return self._get_location_config()._get_signature_checking()
 
-    def gpg_signing_command(self):
+    def _gpg_signing_command(self):
         """See Config.gpg_signing_command."""
-        return self._get_location_config().gpg_signing_command()
+        return self._get_location_config()._gpg_signing_command()
         
     def __init__(self, branch):
         super(BranchConfig, self).__init__()
